--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,7 +40,8 @@ android {
         applicationId "com.example.sdd_assignment_2"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion flutter.minSdkVersion = 21
+        //flutter.minSdkVersion=21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
