--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/images/
+    - assets/images/logo.png
   # To add assets to your application, add an assets section, like this:
   #assets:
   #  - assets/images
