--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_database: ^10.0.6
   flame: ^1.5.0
   google_fonts: ^3.0.1
+  localstorage: ^4.0.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
