--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,11 +69,11 @@ flutter:
     - assets/images/logo.png
     - assets/images/coin.png
     - assets/images/point.png
-    - assets/images/home.png
-    - assets/images/factory.png
-    - assets/images/motorway.png
-    - assets/images/park.png
-    - assets/images/shopping-center.png
+    - assets/images/Industry.png
+    - assets/images/Road.png
+    - assets/images/Park.png
+    - assets/images/Commercial.png
+    - assets/images/Residential.png
   # To add assets to your application, add an assets section, like this:
   #assets:
   #  - assets/images
