changed application name and fixed bugs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,13 @@ dependencies:
   firebase_auth: ^4.2.3
   google_sign_in: ^5.4.2
   fluttertoast: ^8.1.2
+  flutter_launcher_icons: ^0.11.0
+
+flutter_icons:
+  image_path: "assets/images/App_logo.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
