--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sdd_assignment_2">
    <application
-        android:label="sdd_assignment_2"
+        android:label="N.A.C"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
