--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
     - assets/images/Commercial.png
     - assets/images/Residential.png
     - assets/images/MONKEI.png
+    - assets/images/Profile.png
   # To add assets to your application, add an assets section, like this:
   #assets:
   #  - assets/images
